--- a/Zezoprice/Properties/launchSettings.json
+++ b/Zezoprice/Properties/launchSettings.json
@@ -8,7 +8,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://10.100.102.97:5000"
+      "applicationUrl": "http://localhost:6007"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -24,7 +24,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:6063",
+      "applicationUrl": "http://localhost:6000",
       "sslPort": 44343
     }
   }
